objects/BICE_P2P_Relationship__c.object
<CustomObject>
    <description>This object is for storing the relationships between retail customers (Person Accounts).</description>
    <fields>
        <fullName>CIF_RECLI_Id__c</fullName>
        <externalId>true</externalId>
        <label>CIF_RECLI_Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FromPerson__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Cuentas personales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BICE P2P Relationships</relationshipLabel>
        <relationshipName>BICE_P2P_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family Member</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Co-owner on BICE Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToPerson__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Cuentas personales</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BICE P2P Relationships (Account)</relationshipLabel>
        <relationshipName>BICE_P2P_Relationships1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>BICE P2P Relationship</label>
    <nameField>
        <label>BICE P2P Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BICE P2P Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>